{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 165,
  "lineage": "8c689181-accd-4d6c-0100-d78b85fba6cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:network-acl/acl-0e177eee8b4b6099c",
            "default_network_acl_id": "acl-0e177eee8b4b6099c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e177eee8b4b6099c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "630438171297",
            "region": "ap-northeast-2",
            "subnet_ids": [
              "subnet-0574209b71949722a",
              "subnet-07ef83e28ed3d30d2",
              "subnet-09eef843b1695c669",
              "subnet-0c366f41b1f6ebc24",
              "subnet-0ee52007aad972edd"
            ],
            "tags": {
              "Name": "shopeasy-default-nacl"
            },
            "tags_all": {
              "Name": "shopeasy-default-nacl"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:security-group/sg-055a57005062a0eb6",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-055a57005062a0eb6",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "630438171297",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopeasy-default-sg-isolated"
            },
            "tags_all": {
              "Name": "shopeasy-default-sg-isolated"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fcbccd43fa7aa90",
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:elastic-ip/eipalloc-08fcbccd43fa7aa90",
            "domain": "vpc",
            "id": "eipalloc-08fcbccd43fa7aa90",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-228-230.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.228.230",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shopeasy-nat-eip"
            },
            "tags_all": {
              "Name": "shopeasy-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00aa851417c591bb3",
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:instance/i-075173a4d6aefe81d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075173a4d6aefe81d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ee7ee3bf6764e574"
              }
            ],
            "primary_network_interface_id": "eni-0ee7ee3bf6764e574",
            "private_dns": "ip-10-0-11-59.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.59",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:630438171297:key/9582a2fa-6c3f-4685-8904-f23cfa51d240",
                "throughput": 125,
                "volume_id": "vol-085c905b4bfdeab93",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ef83e28ed3d30d2",
            "tags": {
              "Name": "shopeasy-app-ec2-a"
            },
            "tags_all": {
              "Name": "shopeasy-app-ec2-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2af12c959eb15a0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "i-075173a4d6aefe81d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_app_a",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00aa851417c591bb3",
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:instance/i-003eb5fcdad35aea2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003eb5fcdad35aea2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0468e6005cefa4d5f"
              }
            ],
            "primary_network_interface_id": "eni-0468e6005cefa4d5f",
            "private_dns": "ip-10-0-12-21.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.21",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:630438171297:key/9582a2fa-6c3f-4685-8904-f23cfa51d240",
                "throughput": 125,
                "volume_id": "vol-0a3adc3976136dbb9",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f44273f51df95acd",
            "tags": {
              "Name": "shopeasy-app-ec2-c"
            },
            "tags_all": {
              "Name": "shopeasy-app-ec2-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2af12c959eb15a0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "i-003eb5fcdad35aea2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_app_c",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:internet-gateway/igw-03b9c243e41e4d1de",
            "id": "igw-03b9c243e41e4d1de",
            "owner_id": "630438171297",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shopeasy-igw"
            },
            "tags_all": {
              "Name": "shopeasy-igw"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "shopeasy-alb-logs-1234567890",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:loadbalancer/app/shopeasy-alb/9050bd4cb0031c0f",
            "arn_suffix": "app/shopeasy-alb/9050bd4cb0031c0f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "shopeasy-alb-628264276.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:loadbalancer/app/shopeasy-alb/9050bd4cb0031c0f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shopeasy-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-02d3e58c0aa2a1006"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0574209b71949722a"
              },
              {
                "subnet_id": "subnet-09eef843b1695c669"
              }
            ],
            "subnets": [
              "subnet-0574209b71949722a",
              "subnet-09eef843b1695c669"
            ],
            "tags": {
              "Name": "shopeasy-alb"
            },
            "tags_all": {
              "Name": "shopeasy-alb"
            },
            "vpc_id": "vpc-0e2e666f68db31295",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:loadbalancer/app/shopeasy-alb/9050bd4cb0031c0f"
          },
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:listener/app/shopeasy-alb/9050bd4cb0031c0f/c937dbd0f039d742",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:listener/app/shopeasy-alb/9050bd4cb0031c0f/c937dbd0f039d742",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:loadbalancer/app/shopeasy-alb/9050bd4cb0031c0f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:listener/app/shopeasy-alb/9050bd4cb0031c0f/c937dbd0f039d742"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:targetgroup/shopeasy-tg/8d272b749e22acaa",
            "arn_suffix": "targetgroup/shopeasy-tg/8d272b749e22acaa",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:targetgroup/shopeasy-tg/8d272b749e22acaa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shopeasy-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "shopeasy-tg"
            },
            "tags_all": {
              "Name": "shopeasy-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:targetgroup/shopeasy-tg/8d272b749e22acaa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:targetgroup/shopeasy-tg/8d272b749e22acaa,i-075173a4d6aefe81d,8080",
            "port": 8080,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:targetgroup/shopeasy-tg/8d272b749e22acaa",
            "target_id": "i-075173a4d6aefe81d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "port": 8080,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:targetgroup/shopeasy-tg/8d272b749e22acaa",
            "target_id": "i-075173a4d6aefe81d"
          },
          "dependencies": [
            "aws_instance.app_a",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_app_a",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:targetgroup/shopeasy-tg/8d272b749e22acaa,i-003eb5fcdad35aea2,8080",
            "port": 8080,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:targetgroup/shopeasy-tg/8d272b749e22acaa",
            "target_id": "i-003eb5fcdad35aea2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "port": 8080,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:630438171297:targetgroup/shopeasy-tg/8d272b749e22acaa",
            "target_id": "i-003eb5fcdad35aea2"
          },
          "dependencies": [
            "aws_instance.app_c",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_app_c",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fcbccd43fa7aa90",
            "association_id": "eipassoc-03cbbafa0b8327f67",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-070905a4691abde52",
            "network_interface_id": "eni-0f57afbcb29ab4b2c",
            "private_ip": "10.0.1.130",
            "public_ip": "3.37.228.230",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0574209b71949722a",
            "tags": {
              "Name": "shopeasy-nat-gateway"
            },
            "tags_all": {
              "Name": "shopeasy-nat-gateway"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:route-table/rtb-05a553f1aff2bbb00",
            "id": "rtb-05a553f1aff2bbb00",
            "owner_id": "630438171297",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-070905a4691abde52",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shopeasy-private-app-rt"
            },
            "tags_all": {
              "Name": "shopeasy-private-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "rtb-05a553f1aff2bbb00",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:route-table/rtb-04ab8def3025f9aed",
            "id": "rtb-04ab8def3025f9aed",
            "owner_id": "630438171297",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "shopeasy-private-db-rt"
            },
            "tags_all": {
              "Name": "shopeasy-private-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "rtb-04ab8def3025f9aed",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:route-table/rtb-03db11027f914f4b0",
            "id": "rtb-03db11027f914f4b0",
            "owner_id": "630438171297",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b9c243e41e4d1de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shopeasy-public-rt"
            },
            "tags_all": {
              "Name": "shopeasy-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "rtb-03db11027f914f4b0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bbd07434004780f",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-05a553f1aff2bbb00",
            "subnet_id": "subnet-07ef83e28ed3d30d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_app",
            "aws_subnet.private_app_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069ec1644ad33f73e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-05a553f1aff2bbb00",
            "subnet_id": "subnet-0f44273f51df95acd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_app",
            "aws_subnet.private_app_c",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b682dae025e5c449",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-04ab8def3025f9aed",
            "subnet_id": "subnet-0c366f41b1f6ebc24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd482eee8bbfed3e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-04ab8def3025f9aed",
            "subnet_id": "subnet-0ee52007aad972edd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022870e12f1ae4258",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03db11027f914f4b0",
            "subnet_id": "subnet-0574209b71949722a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095eeb5229563dc52",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03db11027f914f4b0",
            "subnet_id": "subnet-09eef843b1695c669"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:security-group/sg-02d3e58c0aa2a1006",
            "description": "Allow HTTP inbound traffic from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d3e58c0aa2a1006",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shopeasy-alb-sg",
            "name_prefix": "",
            "owner_id": "630438171297",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopeasy-alb-sg"
            },
            "tags_all": {
              "Name": "shopeasy-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "sg-02d3e58c0aa2a1006",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:security-group/sg-0a2af12c959eb15a0",
            "description": "Allow traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2af12c959eb15a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d3e58c0aa2a1006"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "shopeasy-app-sg",
            "name_prefix": "",
            "owner_id": "630438171297",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopeasy-app-sg"
            },
            "tags_all": {
              "Name": "shopeasy-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "sg-0a2af12c959eb15a0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:security-group/sg-0ad365ba7d18374bc",
            "description": "Allow traffic from App EC2 only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad365ba7d18374bc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from App SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2af12c959eb15a0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "shopeasy-db-sg",
            "name_prefix": "",
            "owner_id": "630438171297",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopeasy-db-sg"
            },
            "tags_all": {
              "Name": "shopeasy-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "sg-0ad365ba7d18374bc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:subnet/subnet-07ef83e28ed3d30d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ef83e28ed3d30d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630438171297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shopeasy-private-app-subnet-2a"
            },
            "tags_all": {
              "Name": "shopeasy-private-app-subnet-2a"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "subnet-07ef83e28ed3d30d2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:subnet/subnet-0f44273f51df95acd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f44273f51df95acd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630438171297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shopeasy-private-app-subnet-2c"
            },
            "tags_all": {
              "Name": "shopeasy-private-app-subnet-2c"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "subnet-0f44273f51df95acd",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:subnet/subnet-0c366f41b1f6ebc24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c366f41b1f6ebc24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630438171297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shopeasy-private-db-subnet-2a"
            },
            "tags_all": {
              "Name": "shopeasy-private-db-subnet-2a"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "subnet-0c366f41b1f6ebc24",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:subnet/subnet-0ee52007aad972edd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee52007aad972edd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630438171297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shopeasy-private-db-subnet-2c"
            },
            "tags_all": {
              "Name": "shopeasy-private-db-subnet-2c"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "subnet-0ee52007aad972edd",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:subnet/subnet-0574209b71949722a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0574209b71949722a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630438171297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shopeasy-public-subnet-2a"
            },
            "tags_all": {
              "Name": "shopeasy-public-subnet-2a"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "subnet-0574209b71949722a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:subnet/subnet-09eef843b1695c669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09eef843b1695c669",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630438171297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shopeasy-public-subnet-2c"
            },
            "tags_all": {
              "Name": "shopeasy-public-subnet-2c"
            },
            "vpc_id": "vpc-0e2e666f68db31295"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "subnet-09eef843b1695c669",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:630438171297:vpc/vpc-0e2e666f68db31295",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e177eee8b4b6099c",
            "default_route_table_id": "rtb-0c6def9df21c44228",
            "default_security_group_id": "sg-055a57005062a0eb6",
            "dhcp_options_id": "dopt-0bcf686fa4d287e60",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2e666f68db31295",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6def9df21c44228",
            "owner_id": "630438171297",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shopeasy-vpc"
            },
            "tags_all": {
              "Name": "shopeasy-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630438171297",
            "id": "vpc-0e2e666f68db31295",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}